# Operating-systems

lab/vtpc/lib/: CMakeLists.txt  io_load.c  loaders_parser.c  main.c  vtpc.c  vtpc.h
lab/vtpc/test/lib/: CMakeLists.txt
lab/vtsh/: shell
lab/vtsh/lib/: CMakeLists.txt  command_executor.c  command_parser.c  loaders_parser.c  vtsh.h
lab/vtsh/test/: shell
